puesta la tarjeta en la página

--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
 						</div>
 						<div>
 							<article>
+								<a href="https://github.com/idko2004/low-battery-warning-discord" target="_blank">
+									<img src="img/lowbatterywarningdiscord.svg" fetchpriority="high" class="card titletxt" titletxt="tcosa" right-click="modal-cosa" alt="cosa-matematicas" title='cosa-matemáticas: Helps with one specific math homework.'>
+								</a>
+							</article>
+							<article>
 								<a href="https://github.com/idko2004/cosa-matematicas" target="_blank">
 									<img src="img/cosa-matematicas.svg" fetchpriority="high" class="card titletxt" titletxt="tcosa" right-click="modal-cosa" alt="cosa-matematicas" title='cosa-matemáticas: Helps with one specific math homework.'>
 								</a>
@@ -149,10 +154,10 @@
 						</div>
 						<div class="textcenter">
 							<a href="https://github.com/idko2004/" target="_blank" class="contacticon-container">
-								<img src="/commonassets/icons/github-mark/github-mark-white.svg" alt="Github" title="Github" class="contacticon githubcontacticon">
+								<img src="commonassets/icons/github-mark/github-mark-white.svg" alt="Github" title="Github" class="contacticon githubcontacticon">
 							</a>
 							<a href="mailto:ivankeudell@gmail.com" target="_blank" class="contacticon-container" id="email-link">
-								<img src="/commonassets/icons/svgrepo/email-white-no-padding.svg" alt="Email" title="Email" class="contacticon emailcontacticon alttxt titletxt" alttxt="email" titletxt="email">
+								<img src="commonassets/icons/svgrepo/email-white-no-padding.svg" alt="Email" title="Email" class="contacticon emailcontacticon alttxt titletxt" alttxt="email" titletxt="email">
 							</a>
 						</div>
 					</section>
