terminado el modal de low-battery-warning-discord

--- a/index.html
+++ b/index.html
@@ -237,14 +237,12 @@
 					<div class="projecticons">
 						<a class="github-link light-icon alttxt titletxt" href="https://github.com/idko2004/low-battery-warning-discord" target="_blank" alt="github" title="View the source code" alttxt="sourcecode" titletxt="sourcecode"></a>
 					</div>
+					<p class="txt" txt="mbatterydiscord1">a</p>
 					<p>
-						Si es que tienes un dispositivo con Android y utilizas ese dispositivo como algún tipo de servidor gracias a Termux, no quieres tenerlo enchufado todo el rato para que no se le arruine la batería, pero también se te suele olvidar enchufarlo cuando ya le queda poca, este proyecto podría ser de ayuda.
+						<b>low-battery-warning-<span class="discord-span">discord</span></b> <span class="txt" txt="mbatterydiscord2">a</span>
 					</p>
 					<p>
-						<b>low-battery-warning-<span class="discord-span">discord</span></b> envía un mensaje de Discord cuando la batería del dispositivo está baja. Así que si tienes activas las notificaciones de Discord, deberías enterarte cuando el bot te hace un ping. ¡Así ya no se le acaba la batería!
-					</p>
-					<p>
-						<b>low-battery-warning-<span class="discord-span">discord</span></b> no se ejecuta en segundo plano, sino que comprueba si la batería está baja, envía un mensaje si es necesario y se cierra. Por lo que tendrás que configurar un cronjob en Termux, en el readme del proyecto hay instrucciones sobre cómo hacer eso. También es necesario crear tu propio bot de Discord.
+						<b>low-battery-warning-<span class="discord-span">discord</span></b> <span class="txt" txt="mbatterydiscord3">a</span>
 					</p>
 					<div>
 						<span class="discord-span"><b class="txt" txt="madewithhelp">nightly</b></span>
