modificada la forma en la que funciona cambiar el idioma

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 						<div>
 							<article>
 								<a href="https://github.com/idko2004/low-battery-warning-discord" target="_blank">
-									<img src="img/lowbatterywarningdiscord.svg" fetchpriority="high" class="card titletxt" titletxt="tdiscordbattery" right-click="modal-battery-discord" alt="low-battery-warning-discord" title='Let your Android device notify you via Discord when its about to die'>
+									<img src="img/lowbatterywarningdiscord.svg" fetchpriority="high" class="card titletxt" titletxt="tbatterydiscord" right-click="modal-battery-discord" alt="low-battery-warning-discord" title='Let your Android device notify you via Discord when its about to die'>
 								</a>
 							</article>
 							<article>
