animación para el texto de consejo

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
 		<link rel="icon" type="image/x-icon" href="img/favicon.jpg">
 
-		<script defer src="js/random.js" fetchpriority="high"></script>
+		<script defer src="js/utils.js" fetchpriority="high"></script>
 		<script defer src="js/background.js" fetchpriority="high"></script>
 		<script defer src="js/language.js" fetchpriority="high"></script>
+		<script defer src="js/tip-animation.js"></script>
 		<script defer src="js/modals.js"></script>
 		<script defer src="js/music.js"></script>
 		<script defer src="js/email.js"></script>
@@ -27,9 +28,9 @@
 				<h1 class="txt" txt="maintitle">idko's projects</h1>
 				<div class="header-tooltip">
 					<small>
-						<i>
-							<b class="txt" txt="tip">Tip: </b>
-							<span class="txt" txt="rightclicktip">Right-click (or hold) a project to see details</span>
+						<i id="tip-animation-container">
+							<!--b class="txt" txt="tip">Tip: </b>
+							<span class="txt" txt="rightclicktip">Right-click (or hold) a project to see details</span-->
 						</i>
 					</small>
 				</div>
